2013-07-09  Ralf Hemmecke  <ralf@hemmecke.org>

	* configure.ac, Makefile.in, src/Makefile.in,
	src/algebra/Makefile.in, src/doc/Makefile.in,
	src/etc/spadedit.pamphlet, src/hyper/Makefile.in, src/doc/*:
	re-establish HyperDoc content from .htex sources

2013-07-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/interp/trace.boot
	src/interp/vmlisp.lisp, src/interp/setvars.boot
	src/interp/debug.lisp, src/interp/Makefile.in:
	Convert a few tracing functions to Boot.

2013-07-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/interp/trace.boot,
	src/interp/macros.lisp, src/interp/lisplib.boot,
	src/interp/ncomp.boot: Misc cleanups.

2013-07-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-spec2.boot: Allow calling Lisp
	macros from interpreter.

2013-07-03  Ralf Hemmecke <ralf@hemmecke.org>

	* configure.ac: Remove unused AUTO_GOOD_SHELL.

2013-07-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/op.spad.pamphlet: Add more operators.

2013-07-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-map.boot: Avoid exponential time in
	'mapRecurDepth'.

2013-06-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet,
	src/algebra/intef.spad.pamphlet: Rename 'limitedint'
	to 'logint', etc.

2013-06-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot, src/interp/parse.boot,
	src/interp/msg.boot: Misc cleanups.

2013-06-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot, src/interp/parsing.lisp
	src/interp/scwrap2.boot: Add charactes position to
	tokens, clean up handling of nonblank info.

2013-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot, src/interp/nrunopt.boot,
	src/interp/spad.lisp, src/interp/util.lisp:  Bind '$'
	only during evaluation of categories.

2013-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in: Add mising backslash, remove potentially